@@ -232,3 +232,6 @@
 - Replaced a few strlen()s with sizeof(), should make the IRCd start a bit faster
 - Fixed a svsmotd bug (from 3.1) prevented adding lines to the svsmotd
 - Recoded some dynamic motd stuff. Now uses 1 function.
+- Added deny channel { channel "channelmask"; reason "why"; }; and
+        allow channel { channel "channelmask"; };. Replaces chrestrict
+- Made those above get rehashed
